# Caze

./: CMakeLists.txt  Caze.sublime-project  Caze.sublime-workspace  README.md  build.sh  todo.txt
.github/workflows/: cmake.yml
Caze-Core/: caze.hpp
Caze-Core/graphics/: batchrenderer2D.cpp  batchrenderer2D.hpp  renderable2d.hpp  renderer2d.hpp  shader.hpp  simple2drenderer.cpp  simple2drenderer.hpp  sprite.cpp  sprite.hpp  static_sprite.cpp  static_sprite.hpp
Caze-Core/graphics/buffers/: buffer.cpp  indexBuffer.cpp  indexBuffer.hpp  vertexArray.cpp
Caze-Core/maths/: mat4.cpp  mat4.hpp
Caze-Core/src/: caze.hpp
Caze-Core/src/graphics/: batchrenderer2D.cpp  batchrenderer2D.hpp  simple2drenderer.hpp
Caze-Core/src/maths/: maths.hpp  maths_utils.hpp  vec4.hpp
Caze-Sandbox/: main.cpp
Dependencies/Caze/graphics/buffers/: indexBuffer.hpp  vertexArray.hpp
Dependencies/GLSL/: basic.frag  basic.vert
Example/: Caze
Example/batch-renderer/: Caze
Example/batch-renderer/source-code/: main.cpp
Examples/Caze_2d_lights/: main.cpp
Examples/buffers/: main
Examples/simple_2d_render/: main.cpp
Scripts/: build.sh  exampleBuild.sh  run.sh  sandbox.sh
example/: mouse_position.cpp
include/Caze/graphics/: batchrenderer2D.hpp  window.hpp
include/Caze/graphics/buffers/: buffer.hpp
include/Caze/maths/: vec3.hpp
include/Caze/utils/: fileutils.hpp
include/header/: caze.hpp
include/header/graphics/: renderable2d.hpp  shader.hpp  simple2drenderer.hpp
include/header/graphics/buffers/: buffer.hpp  indexBuffer.hpp
include/header/maths/: vec2.hpp
src/: main.cpp
src/classes/graphics/: shader.cpp  window.cpp
src/classes/graphics/buffers/: buffer.cpp  indexBuffer.cpp  vertexArray.cpp
src/classes/maths/: vec2.cpp  vec3.cpp  vec4.cpp
src/classes/shaders/: basic.frag  basic.vert
src/classes/utils/: fileutils.cpp
test/: caze_shader_load_test.cpp  triangle_working_code.cpp
